--- a/index.html
+++ b/index.html
@@ -3,8 +3,23 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+			rel="stylesheet"
+		/>
 		<link href="/src/style.css" rel="stylesheet" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<style>
+			:root {
+				--default-font-family: "Roboto";
+			}
+
+			.companie {
+				height: 32px;
+			}
+		</style>
 		<title>Vite App</title>
 	</head>
 	<body>
@@ -67,6 +82,102 @@
 					</a>
 				</div>
 			</nav>
+			<section
+				class="w-full my-24 bg-white flex items-center justify-between"
+			>
+				<!-- Center Section -->
+				<div class="flex flex-col gap-8">
+					<div>
+						<h1 class="text-7xl font-extrabold leading-20">
+							Teach students <br />
+							worldwide
+						</h1>
+					</div>
+
+					<!-- Description -->
+					<div class="text-2xl font-normal">
+						<p class="leading-10">
+							Amet nunc diam orci duis ut sit diam arcu, nec.
+							<br />
+							Eleifend proin massa tincidunt viverra lectus pulvinar.
+							<br />
+							Nunc ipsum est pellentesque turpis ultricies.
+						</p>
+					</div>
+
+					<div class="flex gap-4 items-center">
+						<a
+							href="#"
+							class="bg-orange-600 text-white font-bold text-2xl px-10 py-4 rounded-lg transition-all focus:ring-2 focus:ring-orange-400"
+						>
+							Sign Up Now
+						</a>
+
+						<!-- Buttons -->
+						<a
+							href="#"
+							class="bg-white flex items-center gap-6 text-blue-600 font-medium text-2xl px-10 py-4 rounded-lg transition-all focus:ring-2 focus:ring-blue-400"
+						>
+							<!-- View demo icon -->
+							<svg
+								width="20"
+								height="21"
+								viewBox="0 0 20 21"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									d="M9.99997 20.2662C4.47697 20.2662 -3.05176e-05 15.7892 -3.05176e-05 10.2662C-3.05176e-05 4.74317 4.47697 0.266174 9.99997 0.266174C15.523 0.266174 20 4.74317 20 10.2662C20 15.7892 15.523 20.2662 9.99997 20.2662ZM9.99997 18.2662C12.1217 18.2662 14.1565 17.4233 15.6568 15.923C17.1571 14.4227 18 12.3879 18 10.2662C18 8.14444 17.1571 6.10961 15.6568 4.60932C14.1565 3.10903 12.1217 2.26617 9.99997 2.26617C7.87824 2.26617 5.84341 3.10903 4.34312 4.60932C2.84282 6.10961 1.99997 8.14444 1.99997 10.2662C1.99997 12.3879 2.84282 14.4227 4.34312 15.923C5.84341 17.4233 7.87824 18.2662 9.99997 18.2662ZM14.126 12.0122L10.071 14.9102C9.16597 15.5562 7.94097 15.2992 7.33397 14.3342C7.11491 13.9833 6.99915 13.5778 6.99997 13.1642V7.36817C6.99997 6.20817 7.88297 5.26617 8.97197 5.26617C9.36297 5.26617 9.74597 5.39017 10.071 5.62217L14.126 8.52017C15.031 9.16717 15.272 10.4722 14.666 11.4372C14.5251 11.6621 14.3416 11.8574 14.126 12.0122ZM8.97197 7.36817V13.1642L13.027 10.2662L8.97197 7.36817Z"
+									fill="#2563EB"
+								/>
+							</svg>
+
+							View Demo
+						</a>
+					</div>
+
+					<!-- Trusted by -->
+					<div class="flex my-10 font-normal text-gray-700">
+						<p>Trusted by leading companies</p>
+
+						<div class="flex justify-between px-8 w-full">
+							<img
+								src="/leading-companies/1.svg"
+								class="companie"
+								alt="Companie 1"
+							/>
+							<img
+								src="/leading-companies/2.svg"
+								class="companie"
+								alt="Companie 2"
+							/>
+							<img
+								src="/leading-companies/3.svg"
+								class="companie"
+								alt="Companie 3"
+							/>
+							<img
+								src="/leading-companies/4.svg"
+								class="companie"
+								alt="Companie 4"
+							/>
+							<img
+								src="/leading-companies/5.svg"
+								class="companie"
+								alt="Companie 5"
+							/>
+						</div>
+					</div>
+				</div>
+
+				<!-- <div class="flex flex-col gap-4">
+					<div class="">
+						<h1 class="text-6xl font-extrabold">
+							Teach students worldwide
+						</h1>
+					</div>
+				</div> -->
+			</section>
 		</main>
 		<script type="module" src="/src/main.js"></script>
 	</body>
