fix: signup ring color

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<a href="#" class="text-link-primary font-semibold"> Log In </a>
 					<a
 						href="#"
-						class="bg-white text-gray-900 border-2 border-gray-900 font-semibold px-6 py-2 rounded-lg transition-all focus:ring-2 focus:ring-blue-300"
+						class="bg-white text-gray-900 border-2 border-gray-900 font-semibold px-6 py-2 rounded-lg transition-all focus:ring-2 focus:ring-gray-700"
 					>
 						Sign Up Now
 					</a>
