feat: more sections

--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
 				</nav>
 
 				<!-- Initial content -->
-				<section
-					class="w-full my-32 bg-white flex items-center justify-between"
-				>
+				<section class="w-full my-32 bg-white flex items-center gap-56">
 					<!-- Center Section -->
 					<div class="flex flex-col gap-8">
 						<div>
@@ -180,9 +178,7 @@
 					</div>
 				</section>
 
-				<section
-					class="w-full my-38 bg-white flex items-center justify-between"
-				>
+				<section class="w-full my-38 bg-white flex items-center gap-32">
 					<!-- Center Section -->
 					<div class="flex flex-col gap-8 my-8">
 						<div>
@@ -231,7 +227,7 @@
 					</div>
 
 					<div class="flex justify-center">
-						<!-- <img src="/main.png" alt="Main Section" srcset="" /> -->
+						<img src="/main.png" alt="Main Section" srcset="" />
 					</div>
 				</section>
 
@@ -381,13 +377,10 @@
 
 			<div class="px-24">
 				<!-- Cards section -->
-				<section class="w-full flex flex-col gap-24 bg-white">
+				<section class="w-full flex flex-col gap-24 mb-32 bg-white">
 					<div class="flex justify-between">
 						<div>
-							<h1
-								class="font-extrabold leading-20"
-								style="font-size: 56px"
-							>
+							<h1 class="font-black leading-20" style="font-size: 56px">
 								What everyone says
 							</h1>
 						</div>
@@ -601,10 +594,10 @@
 						>
 							<blockquote class="max-w-2xl mx-auto mb-4 lg:mb-8">
 								<p class="my-4 font-normal text-xl">
-									Lacus vestibulum ultricies mi risus, duis non,
-									volutpat nullam non. Magna congue nisi maecenas elit
-									aliquet eu sed consectetur. Vitae quis cras vitae
-									praesent morbi adipiscing purus consectetur mi.
+									Odio rhoncus ornare ut quam. Molestie vel duis quis
+									scelerisque ut id. In tortor turpis viverra sagittis
+									ultrices nisi, nec tortor. Vestibulum, ultrices
+									ultricies neque, hac ultricies dolor.
 								</p>
 							</blockquote>
 							<figcaption class="flex items-center">
@@ -626,10 +619,11 @@
 						>
 							<blockquote class="max-w-2xl mx-auto mb-4 lg:mb-8">
 								<p class="my-4 font-normal text-xl">
-									Lacus vestibulum ultricies mi risus, duis non,
-									volutpat nullam non. Magna congue nisi maecenas elit
-									aliquet eu sed consectetur. Vitae quis cras vitae
-									praesent morbi adipiscing purus consectetur mi.
+									Sagittis nunc egestas leo et malesuada urna risus.
+									Morbi proin et cras aliquam. Diam tellus, amet, hac
+									imperdiet. Tellus mi volutpat tellus, congue
+									malesuada sit nisl <br />
+									donec a.
 								</p>
 							</blockquote>
 							<figcaption class="flex items-center">
@@ -673,7 +667,112 @@
 						</figure>
 					</div>
 				</section>
+
+				<section class="w-full my-38 bg-white flex items-center gap-48">
+					<!-- Center Section -->
+					<div class="flex flex-col gap-8 my-8">
+						<div>
+							<h1 class="text-7xl font-extrabold leading-20">
+								All the cool features
+							</h1>
+						</div>
+
+						<!-- Description -->
+
+						<div class="text-2xl font-normal">
+							<p class="leading-10">
+								Mauris consequat, cursus pharetra et, habitasse rhoncus
+								quis odio <br />
+								ac. In et dolor eu donec maecenas nulla. Cum sed orci,
+								sit <br />
+								pellentesque quisque feugiat cras ullamcorper. Ultrices
+								in amet, <br />
+								ullamcorper non viverra a, neque orci.
+							</p>
+						</div>
+
+						<div class="flex gap-4 items-center">
+							<!-- Buttons -->
+							<a
+								href="#"
+								class="bg-white flex items-center gap-5 text-blue-600 font-medium text-2xl py-4 rounded-lg transition-all focus:ring-2 focus:ring-blue-400"
+							>
+								View all the features
+
+								<!--  Arrow right -->
+								<svg
+									width="24"
+									height="25"
+									viewBox="0 0 24 25"
+									fill="none"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<path
+										d="M15.586 10.6732L11.636 6.72315C11.4538 6.53455 11.353 6.28195 11.3553 6.01975C11.3576 5.75756 11.4628 5.50674 11.6482 5.32134C11.8336 5.13593 12.0844 5.03076 12.3466 5.02848C12.6088 5.0262 12.8614 5.127 13.05 5.30915L18.707 10.9662C18.8002 11.0588 18.8741 11.169 18.9246 11.2903C18.9751 11.4116 19.001 11.5417 19.001 11.6732C19.001 11.8046 18.9751 11.9347 18.9246 12.056C18.8741 12.1773 18.8002 12.2875 18.707 12.3802L13.05 18.0372C12.9578 18.1327 12.8474 18.2088 12.7254 18.2613C12.6034 18.3137 12.4722 18.3413 12.3394 18.3424C12.2066 18.3436 12.0749 18.3183 11.952 18.268C11.8291 18.2177 11.7175 18.1434 11.6236 18.0495C11.5297 17.9557 11.4555 17.844 11.4052 17.7211C11.3549 17.5982 11.3296 17.4665 11.3307 17.3338C11.3319 17.201 11.3595 17.0698 11.4119 16.9478C11.4643 16.8257 11.5405 16.7154 11.636 16.6232L15.586 12.6732H6C5.73478 12.6732 5.48043 12.5678 5.29289 12.3803C5.10536 12.1927 5 11.9384 5 11.6732C5 11.4079 5.10536 11.1536 5.29289 10.966C5.48043 10.7785 5.73478 10.6732 6 10.6732H15.586Z"
+										fill="#2563EB"
+									/>
+								</svg>
+							</a>
+						</div>
+					</div>
+
+					<div class="flex justify-center items-center">
+						<svg
+							width="534"
+							height="522"
+							viewBox="0 0 534 522"
+							fill="none"
+							xmlns="http://www.w3.org/2000/svg"
+						>
+							<path
+								fill-rule="evenodd"
+								clip-rule="evenodd"
+								d="M26.9327 166.66C0.640848 218.766 -10.9325 292.146 13.1786 362.559C37.2897 432.971 98.8608 475.299 184.868 503.292C346.248 555.817 499.386 487.929 523.265 420.686C545.57 357.878 534.304 314.119 478.269 257.38C422.234 200.641 383.309 160.339 368.651 103.023C354.21 46.5579 335.203 12.8386 291.348 4.0236C243.915 -5.51043 194.031 1.28871 147.22 30.985C99.4641 61.281 51.3916 118.187 26.9327 166.66Z"
+								fill="#FB923C"
+							/>
+						</svg>
+					</div>
+				</section>
 			</div>
+
+			<section class="mt-32 mb-30 bg-yellow-400 p-24 w-full">
+				<div class="flex justify-center items-center">
+					<div>
+						<img
+							src="/join_one.svg"
+							alt="Join a world of learning (image one)"
+						/>
+					</div>
+					<div class="flex items-center flex-col gap-8">
+						<div>
+							<h3 class="text-[56px] font-extrabold">
+								Join a world of learning
+							</h3>
+						</div>
+						<div class="text-2xl font-normal text-center">
+							<p class="leading-10">
+								Malesuada ut aliquam at ac est nisi, interdum etiam
+								dignissim. <br />
+								Risus elit et fringilla habitant ut facilisi.
+							</p>
+						</div>
+						<div class="mt-4">
+							<a
+								href="#"
+								class="bg-orange-600 text-white font-bold text-2xl px-10 py-4 rounded-lg transition-all focus:ring-2 focus:ring-orange-400"
+							>
+								Sign Up Now
+							</a>
+						</div>
+					</div>
+					<div>
+						<img
+							src="/join_two.svg"
+							alt="Join a world of learning (image two)"
+						/>
+					</div>
+				</div>
+			</section>
 		</main>
 		<script type="module" src="/src/main.js"></script>
 	</body>
