feat; Dockerize app

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 					</div>
 
 					<div class="flex justify-center">
-						<img src="/main.png" alt="Main Section" srcset="" />
+						<img src="/main.webp" alt="Main Section" srcset="" />
 					</div>
 				</section>
 
@@ -1147,6 +1147,5 @@
 				</div>
 			</footer>
 		</main>
-		<script type="module" src="/src/main.js"></script>
 	</body>
 </html>
