wip: footer adjustments

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 		<title>Vite App</title>
 	</head>
 	<body>
-		<main class="py-8">
+		<main>
 			<div class="px-24">
-				<nav class="flex justify-between items-center w-full">
+				<nav class="flex py-8 justify-between items-center w-full">
 					<div class="flex gap-16">
 						<div>
 							<!-- Brand Icon -->
@@ -838,49 +838,36 @@
 				</div>
 			</section>
 
-			<footer class="bg-gray-900 h-[37vh] p-8">
-				<div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
-					<div class="md:flex">
+			<div class="px-24 bg-gray-900">
+				<footer class="w-full py-12">
+					<div class="flex pb-10">
 						<div class="mb-6 md:mb-0">
-							<a href="https://flowbite.com/" class="flex items-center">
+							<a href="#" class="flex items-center">
 								<img
 									src="/footer-logo.svg"
-									class="h-8 me-32"
+									class="h-13 me-32"
 									alt="uteach Logo"
 								/>
 							</a>
 						</div>
+
 						<div
-							class="flex items-center justify-between gap-32 sm:grid sm:grid-cols-3 text-gray-200"
+							class="flex items-center gap-32 sm:grid sm:grid-cols-3 text-gray-200"
 						>
 							<div>
 								<h2 class="mb-6 font-semibold text-white">Product</h2>
 								<ul class="font-medium flex flex-col gap-4">
 									<li>
-										<a
-											href="https://flowbite.com/"
-											class="hover:underline"
-											>Pricing</a
-										>
+										<a href="#" class="hover:underline">Pricing</a>
 									</li>
 									<li>
-										<a
-											href="https://tailwindcss.com/"
-											class="hover:underline"
-											>Overview</a
-										>
+										<a href="#" class="hover:underline">Overview</a>
 									</li>
 									<li>
-										<a
-											href="https://flowbite.com/"
-											class="hover:underline"
-											>Browse</a
-										>
+										<a href="#" class="hover:underline">Browse</a>
 									</li>
 									<li>
-										<a
-											href="https://tailwindcss.com/"
-											class="hover:underline flex gap-2"
+										<a href="#" class="hover:underline flex gap-2"
 											>Acessibility
 											<span
 												class="bg-purple-100 text-purple-800 text-sm font-medium me-2 uppercase px-2.5 py-0.5 rounded-sm"
@@ -891,6 +878,7 @@
 								</ul>
 							</div>
 						</div>
+
 						<div
 							class="flex items-center justify-between gap-32 sm:grid sm:grid-cols-3 text-gray-200"
 						>
@@ -898,69 +886,43 @@
 								<h2 class="mb-6 font-semibold text-white">Solutions</h2>
 								<ul class="font-medium flex flex-col gap-4">
 									<li>
-										<a
-											href="https://flowbite.com/"
-											class="hover:underline"
+										<a href="#" class="hover:underline"
 											>Brainstorming</a
 										>
 									</li>
 									<li>
-										<a
-											href="https://tailwindcss.com/"
-											class="hover:underline"
-											>Ideation</a
-										>
+										<a href="#" class="hover:underline">Ideation</a>
 									</li>
 									<li>
-										<a
-											href="https://flowbite.com/"
-											class="hover:underline"
+										<a href="#" class="hover:underline"
 											>Wireframing</a
 										>
 									</li>
 									<li>
-										<a
-											href="https://tailwindcss.com/"
-											class="hover:underline"
-											>Researching</a
-										>
+										<a href="#" class="hover:underline">Research</a>
 									</li>
 								</ul>
 							</div>
 						</div>
 						<div
-							class="flex items-center gap-32 sm:grid sm:grid-cols-3 text-gray-200"
+							class="flex items-center justify-between gap-32 sm:grid sm:grid-cols-3 text-gray-200"
 						>
 							<div>
 								<h2 class="mb-6 font-semibold text-white">Resources</h2>
 								<ul class="font-medium flex flex-col gap-4">
 									<li class="w-[6rem]">
-										<a
-											href="https://flowbite.com/"
-											class="w-full hover:underline"
+										<a href="#" class="w-full hover:underline"
 											>Help Center</a
 										>
 									</li>
 									<li>
-										<a
-											href="https://tailwindcss.com/"
-											class="hover:underline"
-											>Blog</a
-										>
+										<a href="#" class="hover:underline">Blog</a>
 									</li>
 									<li>
-										<a
-											href="https://flowbite.com/"
-											class="hover:underline"
-											>Tutorials</a
-										>
+										<a href="#" class="hover:underline">Tutorials</a>
 									</li>
 									<li>
-										<a
-											href="https://tailwindcss.com/"
-											class="hover:underline"
-											>FAQs</a
-										>
+										<a href="#" class="hover:underline">FAQs</a>
 									</li>
 								</ul>
 							</div>
@@ -972,30 +934,18 @@
 								<h2 class="mb-6 font-semibold text-white">Support</h2>
 								<ul class="font-medium flex flex-col gap-4">
 									<li class="w-[6rem]">
-										<a
-											href="https://flowbite.com/"
-											class="hover:underline"
-											>Contact Us</a
-										>
+										<a href="#" class="hover:underline">Contact Us</a>
 									</li>
 									<li>
-										<a
-											href="https://tailwindcss.com/"
-											class="hover:underline"
-											>Developers</a
-										>
+										<a href="#" class="hover:underline">Developers</a>
 									</li>
 									<li>
-										<a
-											href="https://flowbite.com/"
-											class="hover:underline"
+										<a href="#" class="hover:underline"
 											>Documentation</a
 										>
 									</li>
 									<li>
-										<a
-											href="https://tailwindcss.com/"
-											class="hover:underline"
+										<a href="#" class="hover:underline"
 											>Integrations</a
 										>
 									</li>
@@ -1009,30 +959,16 @@
 								<h2 class="mb-6 font-semibold text-white">Company</h2>
 								<ul class="font-medium flex flex-col gap-4">
 									<li>
-										<a
-											href="https://flowbite.com/"
-											class="hover:underline"
-											>About</a
-										>
+										<a href="#" class="hover:underline">About</a>
 									</li>
 									<li>
-										<a
-											href="https://tailwindcss.com/"
-											class="hover:underline"
-											>Press</a
-										>
+										<a href="#" class="hover:underline">Press</a>
 									</li>
 									<li>
-										<a
-											href="https://flowbite.com/"
-											class="hover:underline"
-											>Events</a
-										>
+										<a href="#" class="hover:underline">Events</a>
 									</li>
 									<li class="w-[8rem]">
-										<a
-											href="https://tailwindcss.com/"
-											class="hover:underline"
+										<a href="#" class="hover:underline"
 											>Request Demo</a
 										>
 									</li>
@@ -1040,9 +976,7 @@
 							</div>
 						</div>
 					</div>
-					<hr
-						class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8"
-					/>
+					<hr class="my-6 sm:mx-auto border-gray-700 lg:my-8" />
 					<div class="sm:flex sm:items-center sm:justify-between">
 						<span
 							class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
@@ -1144,8 +1078,8 @@
 							</a>
 						</div>
 					</div>
-				</div>
-			</footer>
+				</footer>
+			</div>
 		</main>
 	</body>
 </html>
