--- a/index.html
+++ b/index.html
@@ -1006,8 +1006,86 @@
 							<a href="#" class="text-gray-200 hover:text-white">
 								Contact
 							</a>
-							<a href="#" class="text-gray-200 hover:text-white"> EN </a>
-							<a href="#" class="text-gray-200 hover:text-white"> ER </a>
+							<a
+								href="#"
+								class="flex gap-2 text-gray-200 hover:text-white"
+							>
+								<svg
+									width="24"
+									height="25"
+									viewBox="0 0 24 25"
+									fill="none"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<path
+										d="M4.252 10.5C4.08416 11.1534 3.99949 11.8254 4 12.5C4 13.19 4.088 13.86 4.252 14.5H7.1C6.96518 13.1701 6.96518 11.8299 7.1 10.5H4.252ZM5.07 8.5H7.416C7.682 7.283 8.066 6.193 8.537 5.286C7.08518 5.98542 5.87722 7.10523 5.07 8.5ZM19.748 10.5H16.9C17.0348 11.8299 17.0348 13.1701 16.9 14.5H19.748C20.0847 13.1879 20.0847 11.8121 19.748 10.5ZM18.93 8.5C18.1228 7.10523 16.9148 5.98542 15.463 5.286C15.935 6.193 16.318 7.283 16.584 8.5H18.93ZM9.112 10.5C9.03708 11.164 8.99968 11.8318 9 12.5C9 13.185 9.038 13.855 9.112 14.5H14.888C15.0386 13.1709 15.0386 11.8291 14.888 10.5H9.112ZM9.47 8.5H14.53C14.348 7.7483 14.0855 7.01841 13.747 6.323C13.119 5.068 12.447 4.5 12 4.5C11.552 4.5 10.881 5.068 10.253 6.323C9.938 6.955 9.673 7.69 9.47 8.5ZM5.07 16.5C5.87722 17.8948 7.08518 19.0146 8.537 19.714C8.065 18.807 7.682 17.717 7.416 16.5H5.07ZM18.93 16.5H16.584C16.318 17.717 15.934 18.807 15.463 19.714C16.9148 19.0146 18.1228 17.8948 18.93 16.5ZM9.47 16.5C9.673 17.31 9.938 18.045 10.253 18.677C10.881 19.932 11.553 20.5 12 20.5C12.448 20.5 13.119 19.932 13.747 18.677C14.062 18.045 14.327 17.31 14.53 16.5H9.47ZM12 22.5C6.477 22.5 2 18.023 2 12.5C2 6.977 6.477 2.5 12 2.5C17.523 2.5 22 6.977 22 12.5C22 18.023 17.523 22.5 12 22.5Z"
+										fill="#E2E8F0"
+									/>
+								</svg>
+
+								EN
+							</a>
+							<a
+								href="#"
+								class="flex gap-2 text-gray-200 hover:text-white"
+							>
+								<svg
+									width="24"
+									height="25"
+									viewBox="0 0 24 25"
+									fill="none"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<path
+										d="M18.5 5.30423C17.4428 4.78906 16.2552 4.5 15 4.5C10.5817 4.5 7 8.08172 7 12.5C7 16.9183 10.5817 20.5 15 20.5C16.2552 20.5 17.4428 20.2109 18.5 19.6958"
+										stroke="#E5E7EB"
+										stroke-width="2"
+										stroke-linecap="round"
+										stroke-linejoin="round"
+									/>
+									<path
+										d="M5 10.5H16"
+										stroke="#E5E7EB"
+										stroke-width="2"
+										stroke-linecap="round"
+										stroke-linejoin="round"
+									/>
+									<path
+										d="M5 14.5H16"
+										stroke="#E5E7EB"
+										stroke-width="2"
+										stroke-linecap="round"
+										stroke-linejoin="round"
+									/>
+								</svg>
+								ER
+							</a>
+							<a
+								href="#"
+								class="flex gap-2 text-gray-200 hover:text-white"
+							>
+								<svg
+									width="24"
+									height="25"
+									viewBox="0 0 24 25"
+									fill="none"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<rect
+										x="1"
+										y="1.5"
+										width="22"
+										height="22"
+										rx="11"
+										stroke="#E2E8F0"
+										stroke-width="2"
+									/>
+									<path
+										d="M11.9098 15.516L11.5858 18.603C11.572 18.7336 11.5326 18.8602 11.4699 18.9756C11.4072 19.091 11.3224 19.1929 11.2203 19.2755C11.1182 19.3581 11.0008 19.4197 10.8749 19.457C10.7489 19.4942 10.6169 19.5063 10.4863 19.4925C10.3557 19.4787 10.2291 19.4393 10.1137 19.3766C9.99833 19.3139 9.89643 19.2291 9.81384 19.127C9.73124 19.0249 9.66956 18.9075 9.63232 18.7816C9.59508 18.6556 9.58301 18.5236 9.5968 18.393L10.3198 11.51H7.0098C6.74419 11.51 6.48945 11.4045 6.30163 11.2167C6.11382 11.0289 6.0083 10.7741 6.0083 10.5085C6.0083 10.2429 6.11382 9.98815 6.30163 9.80033C6.48945 9.61251 6.74419 9.507 7.0098 9.507H17.0098C17.2754 9.507 17.5302 9.61251 17.718 9.80033C17.9058 9.98815 18.0113 10.2429 18.0113 10.5085C18.0113 10.7741 17.9058 11.0289 17.718 11.2167C17.5302 11.4045 17.2754 11.51 17.0098 11.51H13.6998L14.4228 18.395C14.4411 18.5279 14.4326 18.6632 14.3976 18.7927C14.3626 18.9223 14.3019 19.0435 14.2192 19.1491C14.1364 19.2548 14.0333 19.3427 13.9159 19.4076C13.7985 19.4726 13.6692 19.5133 13.5357 19.5273C13.4023 19.5414 13.2674 19.5284 13.139 19.4892C13.0107 19.4501 12.8915 19.3855 12.7886 19.2994C12.6857 19.2132 12.6012 19.1073 12.5401 18.9878C12.479 18.8684 12.4425 18.7378 12.4328 18.604L12.1098 15.516H11.9098ZM12.0098 9.506C10.9048 9.506 10.0098 8.609 10.0098 7.503C10.0098 6.397 10.9048 5.5 12.0098 5.5C13.1148 5.5 14.0098 6.397 14.0098 7.503C14.0101 8.03379 13.7995 8.54296 13.4245 8.91857C13.0494 9.29417 12.5406 9.50547 12.0098 9.506Z"
+										fill="#E2E8F0"
+									/>
+								</svg>
+							</a>
 						</div>
 					</div>
 				</footer>
