fix: font color

--- a/index.html
+++ b/index.html
@@ -992,8 +992,7 @@
 					</div>
 					<hr class="my-6 sm:mx-auto border-gray-700 lg:my-8" />
 					<div class="sm:flex sm:items-center sm:justify-between">
-						<span
-							class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
+						<span class="text-sm text-gray-200 sm:text-center font-normal"
 							>uteach @ 2023. All rights reserved.
 						</span>
 						<div class="flex mt-4 gap-8 sm:justify-center sm:mt-0">
