feat: yellow middle section

--- a/index.html
+++ b/index.html
@@ -736,22 +736,22 @@
 			</div>
 
 			<!-- Last Yellow section -->
-			<section class="mt-32 bg-yellow-400 p-24 w-full">
-				<div class="flex justify-center items-center">
-					<div>
+			<section class="mt-32 bg-yellow-400 w-full">
+				<div class="w-full py-24 flex justify-center items-center">
+					<div class="w-full">
 						<img
 							src="/join_one.svg"
 							alt="Join a world of learning (image one)"
 						/>
 					</div>
-					<div class="flex items-center flex-col gap-8">
+					<div class="w-full flex items-center flex-col gap-8">
 						<div>
 							<h3 class="text-[56px] font-extrabold">
 								Join a world of learning
 							</h3>
 						</div>
-						<div class="text-2xl font-normal text-center">
-							<p class="leading-10">
+						<div class="text-xl font-normal text-center">
+							<p class="leading-14">
 								Malesuada ut aliquam at ac est nisi, interdum etiam
 								dignissim. <br />
 								Risus elit et fringilla habitant ut facilisi.
@@ -766,9 +766,10 @@
 							</a>
 						</div>
 					</div>
-					<div>
+					<div class="w-full">
 						<img
 							src="/join_two.svg"
+							class="w-full"
 							alt="Join a world of learning (image two)"
 						/>
 					</div>
@@ -838,6 +839,7 @@
 				</div>
 			</section>
 
+			<!-- Footer -->
 			<div class="px-24 bg-gray-900">
 				<footer class="py-12">
 					<div class="flex pb-10">
