--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
 						</div>
 
 						<div class="w-xl">
-							<form>
+							<form id="request-demo-form">
 								<div class="mb-5">
 									<label
 										for="email"
@@ -828,12 +828,12 @@
 						</div>
 
 						<div class="mt-2">
-							<a
-								href="#"
+							<button
+								form="request-demo-form"
 								class="bg-gray-900 text-white font-bold text-2xl px-12 py-5 rounded-lg transition-all focus:ring-2 focus:ring-gray-400 hover:bg-gray-950"
 							>
 								Request Demo
-							</a>
+							</button>
 						</div>
 					</div>
 				</div>
