--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 				</nav>
 
 				<!-- Initial content -->
-				<section class="w-full my-32 bg-white flex items-center gap-56">
+				<section class="w-full my-32 bg-white flex items-center">
 					<!-- Center Section -->
-					<div class="flex flex-col gap-8">
+					<div class="w-full flex flex-col gap-8">
 						<div>
 							<h1 class="text-7xl font-extrabold leading-20">
 								Teach students <br />
@@ -108,18 +108,18 @@
 							</p>
 						</div>
 
+						<!-- Buttons -->
 						<div class="flex gap-4 items-center">
 							<a
 								href="#"
-								class="bg-orange-600 text-white font-bold text-2xl px-10 py-4 rounded-lg transition-all focus:ring-2 focus:ring-orange-400"
+								class="bg-orange-600 text-white font-bold text-2xl px-12 py-4 rounded-lg transition-all focus:ring-2 focus:ring-orange-400"
 							>
 								Sign Up Now
 							</a>
 
-							<!-- Buttons -->
 							<a
 								href="#"
-								class="bg-white flex items-center gap-6 text-blue-600 font-medium text-2xl px-10 py-4 rounded-lg transition-all focus:ring-2 focus:ring-blue-400"
+								class="bg-white flex items-center gap-6 text-blue-600 font-medium text-xl px-10 py-4 rounded-lg transition-all focus:ring-2 focus:ring-blue-400"
 							>
 								<!-- View demo icon -->
 								<svg
@@ -140,10 +140,12 @@
 						</div>
 
 						<!-- Trusted by -->
-						<div class="flex my-10 font-normal text-gray-700">
-							<p>Trusted by leading companies</p>
+						<div class="flex my-12 font-normal text-gray-700">
+							<div class="w-50">
+								<p>Trusted by <br />leading companies</p>
+							</div>
 
-							<div class="flex justify-between px-8 w-full">
+							<div class="w-full flex items-center gap-12 px-6">
 								<img
 									src="/leading-companies/1.svg"
 									class="companie"
@@ -173,8 +175,13 @@
 						</div>
 					</div>
 
-					<div class="flex justify-center">
-						<img src="/main.webp" alt="Main Section" srcset="" />
+					<div class="w-full flex justify-end items-baseline">
+						<img
+							src="/main.webp"
+							class="w-3xl"
+							alt="Main Section"
+							srcset=""
+						/>
 					</div>
 				</section>
 
