fix: docs, wip some content

--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
 					</div>
 				</section>
 
-				<section class="w-full my-38 bg-white flex items-center gap-32">
+				<section class="flex w-full my-30 bg-white">
 					<!-- Center Section -->
-					<div class="flex flex-col gap-8 my-8">
+					<div class="flex w-full flex-col gap-8 my-8">
 						<div>
 							<h1 class="text-7xl font-extrabold leading-20">
 								An all-in-one app <br />
@@ -197,7 +197,9 @@
 
 						<!-- Description -->
 						<div class="mx-6 text-2xl font-normal">
-							<ul class="list-image-[url(/check.svg)]">
+							<ul
+								class="list-image-[url(/check.svg)] flex flex-col gap-3"
+							>
 								<li>
 									Est et in pharetra magna adipiscing ornare aliquam.
 								</li>
@@ -233,8 +235,119 @@
 						</div>
 					</div>
 
-					<div class="flex justify-center">
-						<img src="/main.png" alt="Main Section" srcset="" />
+					<div>
+						<div class="flex justify-end">
+							<img
+								src="/Blob.svg"
+								class="absolute me-56"
+								alt="Main Section"
+								srcset=""
+							/>
+						</div>
+						<div class="relative bottom-4">
+							<div class="flex justify-end w-full">
+								<img src="/Desktop.png" alt="Main Section" srcset="" />
+							</div>
+
+							<!-- Cards -->
+							<div class="flex justify-end gap-4">
+								<!-- Card -->
+								<figure
+									class="flex flex-col gap-3 p-4 pb-4 bg-white rounded-2xl shadow-xl"
+								>
+									<blockquote>
+										<span
+											class="bg-purple-100 text-purple-800 text-md font-normal px-2.5 py-1 rounded-sm"
+											>Featured</span
+										>
+									</blockquote>
+									<figcaption class="flex gap-3 flex-col">
+										<div class="space-y-0.5 text-xl font-medium">
+											<p>The map of mathematics</p>
+										</div>
+										<div>
+											<p
+												class="text-sm self-start font-normal text-gray-600 leading-6"
+											>
+												Egestas elit dui <br />
+												scelerisque ut eu purus aliquam vitae
+												habitasse.
+											</p>
+										</div>
+										<div>
+											<a
+												href="#"
+												class="w-full inline-block text-center text-[0.75rem] tracking-wider bg-white text-blue-600 border-2 border-blue-600 font-semibold px-6 py-2 rounded-lg transition-all focus:ring-2 focus:ring-blue-700"
+												>Take Leasson</a
+											>
+										</div>
+									</figcaption>
+								</figure>
+								<!-- Card -->
+								<figure
+									class="flex flex-col gap-3 p-4 pb-4 bg-white rounded-2xl shadow-xl"
+								>
+									<blockquote>
+										<span
+											class="bg-blue-100 text-blue-800 text-md font-normal px-2.5 py-1 rounded-sm"
+											>Featured</span
+										>
+									</blockquote>
+									<figcaption class="flex gap-3 flex-col">
+										<div class="space-y-0.5 text-xl font-medium">
+											<p>Design for how people think</p>
+										</div>
+										<div>
+											<p
+												class="text-sm self-start font-normal text-gray-600 leading-6"
+											>
+												Aliquam ut euismod <br />
+												condimentum elementum ultricies volutpat sit
+												non.
+											</p>
+										</div>
+										<div>
+											<a
+												href="#"
+												class="w-full inline-block text-center text-[0.75rem] tracking-wider bg-white text-blue-600 border-2 border-blue-600 font-semibold px-6 py-2 rounded-lg transition-all focus:ring-2 focus:ring-blue-700"
+												>Take Leasson</a
+											>
+										</div>
+									</figcaption>
+								</figure>
+								<!-- Card -->
+								<figure
+									class="flex flex-col gap-3 p-4 pb-4 bg-white rounded-2xl shadow-xl"
+								>
+									<blockquote>
+										<span
+											class="bg-green-100 text-green-800 text-md font-normal px-2.5 py-1 rounded-sm"
+											>New</span
+										>
+									</blockquote>
+									<figcaption class="flex gap-3 flex-col">
+										<div class="space-y-0.5 text-xl font-medium">
+											<p>International & commercial law</p>
+										</div>
+										<div>
+											<p
+												class="text-sm self-start font-normal text-gray-600 leading-6"
+											>
+												Molestie integer eu arcu, <br />
+												mauris bibendum rhoncus imperdiet dui.
+											</p>
+										</div>
+										<div>
+											<a
+												href="#"
+												class="w-full inline-block text-center text-[0.75rem] tracking-wider bg-white text-blue-600 border-2 border-blue-600 font-semibold px-6 py-2 rounded-lg transition-all focus:ring-2 focus:ring-blue-700"
+												>Take Leasson</a
+											>
+										</div>
+									</figcaption>
+								</figure>
+							</div>
+						</div>
 					</div>
 				</section>
 
@@ -677,7 +790,7 @@
 
 				<section class="w-full my-38 bg-white flex items-center gap-48">
 					<!-- Center Section -->
-					<div class="flex flex-col gap-8 my-8">
+					<div class="flex flex-col gap-8 my-8 w-full">
 						<div>
 							<h1 class="text-7xl font-extrabold leading-20">
 								All the cool features
@@ -685,7 +798,6 @@
 						</div>
 
 						<!-- Description -->
-
 						<div class="text-2xl font-normal">
 							<p class="leading-10">
 								Mauris consequat, cursus pharetra et, habitasse rhoncus
@@ -723,7 +835,7 @@
 						</div>
 					</div>
 
-					<div class="flex justify-center items-center">
+					<div class="flex justify-center w-full">
 						<svg
 							width="534"
 							height="522"
@@ -989,10 +1101,22 @@
 										<li>
 											<a href="#" class="hover:underline">Events</a>
 										</li>
-										<li class="w-[8rem]">
-											<a href="#" class="hover:underline"
-												>Request Demo</a
-											>
+										<li class="w-full">
+											<a href="#" class="hover:underline flex gap-2">
+												Request Demo
+												<svg
+													width="25"
+													height="25"
+													viewBox="0 0 25 25"
+													fill="none"
+													xmlns="http://www.w3.org/2000/svg"
+												>
+													<path
+														d="M16.2526 11.1569L12.3026 7.20692C12.1205 7.01832 12.0197 6.76571 12.022 6.50352C12.0242 6.24132 12.1294 5.99051 12.3148 5.8051C12.5002 5.61969 12.751 5.51452 13.0132 5.51224C13.2754 5.50997 13.528 5.61076 13.7166 5.79292L19.3736 11.4499C19.4668 11.5426 19.5408 11.6527 19.5912 11.7741C19.6417 11.8954 19.6677 12.0255 19.6677 12.1569C19.6677 12.2883 19.6417 12.4184 19.5912 12.5398C19.5408 12.6611 19.4668 12.7713 19.3736 12.8639L13.7166 18.5209C13.6244 18.6164 13.514 18.6926 13.392 18.745C13.27 18.7974 13.1388 18.825 13.006 18.8262C12.8732 18.8273 12.7416 18.802 12.6187 18.7517C12.4958 18.7015 12.3841 18.6272 12.2902 18.5333C12.1963 18.4394 12.1221 18.3278 12.0718 18.2049C12.0215 18.082 11.9962 17.9503 11.9974 17.8175C11.9985 17.6847 12.0261 17.5535 12.0785 17.4315C12.1309 17.3095 12.2071 17.1992 12.3026 17.1069L16.2526 13.1569H6.66663C6.40141 13.1569 6.14706 13.0516 5.95952 12.864C5.77198 12.6765 5.66663 12.4221 5.66663 12.1569C5.66663 11.8917 5.77198 11.6373 5.95952 11.4498C6.14706 11.2623 6.40141 11.1569 6.66663 11.1569H16.2526Z"
+														fill="#E2E8F0"
+													/>
+												</svg>
+											</a>
 										</li>
 									</ul>
 								</div>
