feat: all-in-one section base card content

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 					</div>
 				</section>
 
-				<section class="flex w-full my-30 bg-white">
+				<section class="flex w-full items-center my-30 bg-white">
 					<!-- Center Section -->
 					<div class="flex w-full flex-col gap-8 my-8">
 						<div>
@@ -239,21 +239,43 @@
 						<div class="flex justify-end">
 							<img
 								src="/Blob.svg"
-								class="absolute me-56"
+								class="absolute me-56 max-h-[40rem] h-full"
 								alt="Main Section"
 								srcset=""
 							/>
 						</div>
-						<div class="relative bottom-4">
-							<div class="flex justify-end w-full">
-								<img src="/Desktop.png" alt="Main Section" srcset="" />
+						<div class="relative">
+							<!-- Browser mockup -->
+
+							<div class="max-w-7xl">
+								<div
+									class="w-full h-11 rounded-t-lg bg-white flex justify-start items-center space-x-1.5 px-3"
+								>
+									<span class="w-3 h-3 rounded-full bg-red-400"></span>
+									<span
+										class="w-3 h-3 rounded-full bg-yellow-400"
+									></span>
+									<span
+										class="w-3 h-3 rounded-full bg-green-400"
+									></span>
+								</div>
+								<div class="bg-white border-t-0 w-full h-96">
+									<div>
+										<img
+											src="/Desktop.png"
+											class="w-full"
+											alt="Main Section"
+											srcset=""
+										/>
+									</div>
+								</div>
 							</div>
 
 							<!-- Cards -->
-							<div class="flex justify-end gap-4">
+							<div class="flex gap-5">
 								<!-- Card -->
 								<figure
-									class="flex flex-col gap-3 p-4 pb-4 bg-white rounded-2xl shadow-xl"
+									class="flex flex-col gap-3 p-5 pb-4 bg-white rounded-2xl shadow-xl"
 								>
 									<blockquote>
 										<span
@@ -285,12 +307,12 @@
 								</figure>
 								<!-- Card -->
 								<figure
-									class="flex flex-col gap-3 p-4 pb-4 bg-white rounded-2xl shadow-xl"
+									class="flex flex-col gap-3 p-5 pb-4 bg-white rounded-2xl shadow-xl"
 								>
 									<blockquote>
 										<span
 											class="bg-blue-100 text-blue-800 text-md font-normal px-2.5 py-1 rounded-sm"
-											>Featured</span
+											>Popular</span
 										>
 									</blockquote>
 									<figcaption class="flex gap-3 flex-col">
@@ -317,7 +339,7 @@
 								</figure>
 								<!-- Card -->
 								<figure
-									class="flex flex-col gap-3 p-4 pb-4 bg-white rounded-2xl shadow-xl"
+									class="flex flex-col gap-3 p-5 pb-4 bg-white rounded-2xl shadow-xl"
 								>
 									<blockquote>
 										<span
