--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 							<div class="flex gap-5">
 								<!-- Card -->
 								<figure
-									class="flex flex-col gap-3 p-5 pb-4 bg-white rounded-2xl shadow-xl"
+									class="w-full flex flex-col gap-3 p-5 pb-4 bg-white rounded-2xl shadow-xl"
 								>
 									<blockquote>
 										<span
@@ -300,14 +300,14 @@
 											<a
 												href="#"
 												class="w-full inline-block text-center text-[0.75rem] tracking-wider bg-white text-blue-600 border-2 border-blue-600 font-semibold px-6 py-2 rounded-lg transition-all focus:ring-2 focus:ring-blue-700"
-												>Take Leasson</a
+												>Take Lesson</a
 											>
 										</div>
 									</figcaption>
 								</figure>
 								<!-- Card -->
 								<figure
-									class="flex flex-col gap-3 p-5 pb-4 bg-white rounded-2xl shadow-xl"
+									class="w-full flex flex-col gap-3 p-5 pb-4 bg-white rounded-2xl shadow-xl"
 								>
 									<blockquote>
 										<span
@@ -332,14 +332,14 @@
 											<a
 												href="#"
 												class="w-full inline-block text-center text-[0.75rem] tracking-wider bg-white text-blue-600 border-2 border-blue-600 font-semibold px-6 py-2 rounded-lg transition-all focus:ring-2 focus:ring-blue-700"
-												>Take Leasson</a
+												>Take Lesson</a
 											>
 										</div>
 									</figcaption>
 								</figure>
 								<!-- Card -->
 								<figure
-									class="flex flex-col gap-3 p-5 pb-4 bg-white rounded-2xl shadow-xl"
+									class="w-full flex flex-col gap-3 p-5 pb-4 bg-white rounded-2xl shadow-xl"
 								>
 									<blockquote>
 										<span
@@ -363,7 +363,7 @@
 											<a
 												href="#"
 												class="w-full inline-block text-center text-[0.75rem] tracking-wider bg-white text-blue-600 border-2 border-blue-600 font-semibold px-6 py-2 rounded-lg transition-all focus:ring-2 focus:ring-blue-700"
-												>Take Leasson</a
+												>Take Lesson</a
 											>
 										</div>
 									</figcaption>
@@ -857,21 +857,88 @@
 						</div>
 					</div>
 
-					<div class="flex justify-center w-full">
-						<svg
-							width="534"
-							height="522"
-							viewBox="0 0 534 522"
-							fill="none"
-							xmlns="http://www.w3.org/2000/svg"
-						>
-							<path
-								fill-rule="evenodd"
-								clip-rule="evenodd"
-								d="M26.9327 166.66C0.640848 218.766 -10.9325 292.146 13.1786 362.559C37.2897 432.971 98.8608 475.299 184.868 503.292C346.248 555.817 499.386 487.929 523.265 420.686C545.57 357.878 534.304 314.119 478.269 257.38C422.234 200.641 383.309 160.339 368.651 103.023C354.21 46.5579 335.203 12.8386 291.348 4.0236C243.915 -5.51043 194.031 1.28871 147.22 30.985C99.4641 61.281 51.3916 118.187 26.9327 166.66Z"
-								fill="#FB923C"
-							/>
-						</svg>
+					<div class="flex justify-center items-center w-full me-32">
+						<div class="absolute">
+							<svg
+								width="704"
+								height="704"
+								viewBox="0 0 534 522"
+								fill="none"
+								xmlns="http://www.w3.org/2000/svg"
+							>
+								<path
+									fill-rule="evenodd"
+									clip-rule="evenodd"
+									d="M26.9327 166.66C0.640848 218.766 -10.9325 292.146 13.1786 362.559C37.2897 432.971 98.8608 475.299 184.868 503.292C346.248 555.817 499.386 487.929 523.265 420.686C545.57 357.878 534.304 314.119 478.269 257.38C422.234 200.641 383.309 160.339 368.651 103.023C354.21 46.5579 335.203 12.8386 291.348 4.0236C243.915 -5.51043 194.031 1.28871 147.22 30.985C99.4641 61.281 51.3916 118.187 26.9327 166.66Z"
+									fill="#FB923C"
+								/>
+							</svg>
+						</div>
+
+						<div class="relative flex flex-col w-full gap-6">
+							<div class="flex ms-6 items-end">
+								<div class="max-w-60 text-md">
+									<figure
+										class="flex flex-col gap-3 p-5 pb-4 bg-white rounded-2xl shadow-xl"
+									>
+										<blockquote>
+											<span
+												class="bg-blue-100 text-blue-800 text-md font-normal px-2.5 py-1 rounded-sm"
+												>Popular</span
+											>
+										</blockquote>
+										<figcaption class="flex gap-3 flex-col">
+											<div class="space-y-0.5 text-xl font-medium">
+												<p>
+													Design for how <br />
+													people think
+												</p>
+											</div>
+											<div>
+												<p
+													class="self-start font-normal text-gray-600 leading-6"
+												>
+													Aliquam ut euismod <br />
+													condimentum elementum ultricies volutpat
+													sit non.
+												</p>
+											</div>
+											<div>
+												<a
+													href="#"
+													class="w-full inline-block text-center tracking-wider bg-white text-blue-600 border-3 border-blue-500 font-semibold px-6 py-2 rounded-lg transition-all focus:ring-2 focus:ring-blue-700"
+													>Take Lesson</a
+												>
+											</div>
+										</figcaption>
+									</figure>
+								</div>
+
+								<div>
+									<img src="/Picture.svg" alt="" srcset="" />
+								</div>
+							</div>
+
+							<div class="flex">
+								<div class="w-full h-full">
+									<img
+										src="/Picture.png"
+										class="h-full w-full object-cover"
+										alt=""
+										srcset=""
+									/>
+								</div>
+
+								<div class="w-full h-full self-end">
+									<img
+										src="/pic.png"
+										class="h-full object-cover"
+										alt=""
+										srcset=""
+									/>
+								</div>
+							</div>
+						</div>
 					</div>
 				</section>
 			</div>
