fix: dedvelopment env

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 					<div class="w-full flex justify-end items-baseline">
 						<img
 							src="/main.webp"
-							class="w-3xl"
+							class="w-full h-full object-cover"
 							alt="Main Section"
 							srcset=""
 						/>
