feat: footer and measurement section

--- a/index.html
+++ b/index.html
@@ -428,7 +428,9 @@
 			</div>
 
 			<section class="mt-32 mb-30 bg-[#0F172A] p-24 w-full">
-				<div class="grid grid-cols-3 text-yellow-400">
+				<div
+					class="grid grid-cols-1 gap-16 md:grid-cols-3 md:gap-0 text-yellow-400"
+				>
 					<div class="flex justify-center items-center flex-col gap-6">
 						<svg
 							width="65"
@@ -954,7 +956,7 @@
 					</div>
 					<div class="w-full flex items-center flex-col gap-8">
 						<div>
-							<h3 class="text-[56px] font-extrabold">
+							<h3 class="text-[56px] text-center font-extrabold">
 								Join a world of learning
 							</h3>
 						</div>
@@ -1048,9 +1050,9 @@
 			</section>
 
 			<!-- Footer -->
-			<div class="px-24 bg-gray-900">
+			<div class="px-8 md:px-24 bg-gray-900">
 				<footer class="py-12">
-					<div class="flex pb-10">
+					<div class="flex flex-col md:flex-row pb-10">
 						<div class="mb-6 md:mb-0">
 							<a href="#" class="flex items-center">
 								<img
@@ -1061,7 +1063,7 @@
 							</a>
 						</div>
 
-						<div class="flex gap-32 mt-4">
+						<div class="flex md:flex-row flex-col gap-16 md:gap-32 mt-4">
 							<div class="text-gray-200">
 								<div>
 									<h2 class="mb-6 font-semibold text-white">
