--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 	<body>
 		<main>
 			<div class="px-24">
-				<nav class="flex py-8 justify-between items-center w-full">
+				<nav
+					class="md:flex hidden py-8 justify-between items-center w-full"
+				>
 					<div class="flex gap-16">
 						<div>
 							<!-- Brand Icon -->
@@ -87,7 +89,9 @@
 				</nav>
 
 				<!-- Initial content -->
-				<section class="w-full my-32 bg-white flex items-center">
+				<section
+					class="w-full my-32 bg-white flex flex-col md:flex-row items-center"
+				>
 					<!-- Center Section -->
 					<div class="w-full flex flex-col gap-8">
 						<div>
@@ -185,7 +189,9 @@
 					</div>
 				</section>
 
-				<section class="flex w-full items-center my-30 bg-white">
+				<section
+					class="flex flex-col md:flex-row w-full items-center my-30 bg-white"
+				>
 					<!-- Center Section -->
 					<div class="flex w-full flex-col gap-8 my-8">
 						<div>
@@ -239,7 +245,7 @@
 						<div class="flex justify-end">
 							<img
 								src="/Blob.svg"
-								class="absolute me-56 max-h-[40rem] h-full"
+								class="absolute me-56 md:max-h-[40rem] h-full"
 								alt="Main Section"
 								srcset=""
 							/>
@@ -707,7 +713,7 @@
 							</svg>
 						</div>
 					</div>
-					<div class="flex gap-8">
+					<div class="flex flex-col md:flex-row gap-8">
 						<figure
 							class="flex flex-col p-8 bg-white rounded-2xl shadow-xl"
 						>
@@ -812,7 +818,9 @@
 					</div>
 				</section>
 
-				<section class="w-full my-38 bg-white flex items-center gap-48">
+				<section
+					class="w-full my-38 bg-white flex flex-col md:flex-row items-center gap-48"
+				>
 					<!-- Center Section -->
 					<div class="flex flex-col gap-8 my-8 w-full">
 						<div>
@@ -970,7 +978,7 @@
 						<div class="mt-4">
 							<a
 								href="#"
-								class="bg-orange-600 text-white font-bold text-2xl px-10 py-4 rounded-lg transition-all focus:ring-2 focus:ring-orange-400"
+								class="inline-block text-center bg-orange-600 text-white font-bold text-2xl px-10 py-4 rounded-lg transition-all focus:ring-2 focus:ring-orange-400"
 							>
 								Sign Up Now
 							</a>
@@ -991,7 +999,9 @@
 				<div class="flex justify-center items-center">
 					<div class="flex items-center flex-col gap-6">
 						<div>
-							<h3 class="text-[56px] font-extrabold text-white">
+							<h3
+								class="text-[56px] font-extrabold text-white text-center"
+							>
 								Ready for your next project?
 							</h3>
 						</div>
