wip: reponsivity improvments

--- a/index.html
+++ b/index.html
@@ -379,9 +379,16 @@
 					</div>
 				</section>
 
-				<section class="my-32 flex items-center justify-center gap-16">
+				<section
+					class="my-32 flex flex-col-reverse md:flex-row items-center justify-center gap-16"
+				>
 					<div>
-						<img src="/col.png" alt="Columns" srcset="" />
+						<img
+							src="/col.png"
+							class="aspect-3/2 md:aspect-square max-w-full w-full object-cover"
+							alt="Columns"
+							srcset=""
+						/>
 					</div>
 
 					<!-- Center Section -->
@@ -1000,7 +1007,7 @@
 					<div class="flex items-center flex-col gap-6">
 						<div>
 							<h3
-								class="text-[56px] font-extrabold text-white text-center"
+								class="leading-16 text-[56px] font-extrabold text-white text-center"
 							>
 								Ready for your next project?
 							</h3>
